// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accountId 1`] = `
AccountID {
  "address": "5CXU7u72Gz9Jqo6FdAwzSsxX5JhdRwMj2UZ4xrAEoo3AyySx",
  "chainId": ChainID {
    "namespace": "polkadot",
    "reference": "b0a8d493285c2df73290dfb7e61f870f",
  },
}
`;

exports[`createLink create proof with ed25519 1`] = `
Object {
  "account": "5EEvMbuaJQxxPorGtzY2qUYqM3akRrnD36bZD4PomfpLdrtx@polkadot:b0a8d493285c2df73290dfb7e61f870f",
  "message": "0x4372656174652061206e6577206163636f756e74206c696e6b20746f20796f7572206964656e746974792e0a0a6469643a333a626166797364667765667765200a54696d657374616d703a20363636",
  "signature": "0xe7c359daca1d1c2bc82116654ef8277b989624e833966969c556fc82b12875693cb850c64bbb3f145a7db46d9b1bcf04b606960be89d0daac07945791557db0a",
  "timestamp": 666,
  "type": "eoa",
  "version": 2,
}
`;

exports[`createLink create proof with secp256k 1`] = `
Object {
  "account": "5GuAnwx9uKSQxKZB8moxoaX4ceehoCYu4XYMjJkKtm2QDgqC@polkadot:b0a8d493285c2df73290dfb7e61f870f",
  "message": "0x4372656174652061206e6577206163636f756e74206c696e6b20746f20796f7572206964656e746974792e0a0a6469643a333a626166797364667765667765200a54696d657374616d703a20363636",
  "signature": "0x74685cde417eac26ee6d35667772abd9f1243b7c04973848f7b0332a8eca52af37c5d6ece58d73c72b0accbba65a0361fa4d3c2812b761200c87cfdd52c2f15000",
  "timestamp": 666,
  "type": "eoa",
  "version": 2,
}
`;

exports[`createLink create proof with sr25519 1`] = `"5CXU7u72Gz9Jqo6FdAwzSsxX5JhdRwMj2UZ4xrAEoo3AyySx@polkadot:b0a8d493285c2df73290dfb7e61f870f"`;

exports[`createLink create proof with sr25519 2`] = `"0x4372656174652061206e6577206163636f756e74206c696e6b20746f20796f7572206964656e746974792e0a0a6469643a333a626166797364667765667765200a54696d657374616d703a20363636"`;

exports[`createLink create proof with sr25519 3`] = `"eoa"`;
